<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp">

                <TextView

                    android:id="@+id/dialog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/new_question"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_close"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    app:icon="@drawable/ic_close" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separatorColor" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/input_question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/txt_input_background"
                    android:gravity="top"
                    android:hint="@string/question"
                    android:ems="5"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:lines="2" />


                <EditText
                    android:id="@+id/input_question_selection1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/txt_input_background"
                    android:hint="@string/first_selection"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/input_question_selection2"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/txt_input_background"
                    android:hint="@string/second_selection"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />


                <EditText
                    android:id="@+id/input_question_selection3"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/txt_input_background"
                    android:hint="@string/third_selection"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/input_question_answer"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/txt_input_background"
                    android:drawableEnd="@drawable/ic_check"
                    android:hint="@string/true_selection"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white"
        android:gravity="center">

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/save"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:cornerRadius="20dp"

            app:strokeColor="@color/red"
            app:strokeWidth="2dp" />
    </LinearLayout>
</LinearLayout>