<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33eeeeee"
    tools:context=".Activities.Quiz.DoExamActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:paddingHorizontal="10dp"
            android:paddingVertical="22dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_number"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_view_question_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_from_"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_view_questions_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_40"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correct_answers"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_questions_correct_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_40"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#50444444" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/choose_correct_answer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_view_question_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="هذا هو نص السؤال المفترض ان يوضع هنا وعلى الطالب ان يقوم بالاجابة عليه"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_selection_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/question"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_check_box_outline" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_selection_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:elevation="1dp"
                android:padding="10dp"
                android:textSize="14sp"

                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_check_box_outline" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_selection_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:elevation="1dp"
                android:padding="10dp"

                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_check_box_outline" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_selection_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:elevation="1dp"
                android:padding="10dp"

                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_check_box_outline" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="30dp"
                android:padding="16dp"
                android:text="السؤال التالي"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                app:elevation="12dp"
                app:icon="@drawable/ic_arrow_forward" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_end_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginEnd="30dp"
                android:padding="16dp"
                android:text="انهاء الاختبار"
                android:textSize="16sp"
                app:backgroundTint="@color/red"
                app:cornerRadius="20dp"
                app:elevation="12dp"
                app:icon="@drawable/ic_close" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>