<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_video_add_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/btn_close_add_edit_video"
                android:text="@string/add_video"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_close_add_edit_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/close_button"
                android:src="@drawable/ic_close" />

            <Button
                android:id="@+id/btn_save_video"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:text="@string/save"
                app:icon="@drawable/ic_save"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">


            <EditText
                android:id="@+id/input_video_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/txt_input_background"
                android:hint="عنوان الفيديو"
                android:imeOptions="actionNext"
                android:inputType="text" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/input_video_path"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/txt_input_background"
                    android:drawableEnd="@drawable/ic_ondemand_video"
                    android:drawableTint="@color/separatorColor"
                    android:hint="رابط الملف"
                    android:imeOptions="actionDone"
                    android:inputType="textUri" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>